Fix hard negatives GUI label security issue and add comprehensive extraction tools - SECURITY FIX: Remove dangerous user text input for labels in hard negatives GUI - Hardcode label to 'not_a_crow' to prevent database corruption from invalid labels - Add confidence slider for proper database metadata - Validate all labels against established database schema - Add confidence parameter support to command-line extraction tools - Create comprehensive hard negatives extraction tools with both CLI and GUI interfaces - Add false positive extraction utilities for training data enrichment - Update gitignore with additional patterns for model predictions and test files

--- a/.gitignore
+++ b/.gitignore
@@ -333,6 +333,17 @@ changes_since_last_commit.diff
 *.diff
 *_report.txt
 
+# Model prediction outputs - These can be large
+model_predictions_*.json
+*_predictions.json
+*prediction*.json
+
+# Temporary test outputs and directories
+test_false_positives/
+test_hard_negatives/
+temp_test/
+temporary_*/
+
 # IDE and Editor files
 .cursor/
 .cursor.json
